crates/core/src/commands/snapshots/rustic_core__commands__forget__tests__keep-daily3,keep-weekly4.snap
---
source: crates/core/src/commands/forget.rs
expression: result
---
[
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: true,
    reasons: [
      "daily",
      "weekly",
    ],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: true,
    reasons: [
      "daily",
      "weekly",
    ],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: true,
    reasons: [
      "daily",
      "weekly",
    ],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: true,
    reasons: [
      "weekly",
    ],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
  ForgetSnapshot(
    snapshot: "[snapshot]",
    keep: false,
    reasons: [],
  ),
]
